DP-64: Add meta descriptions to each page in the operation guide.
Added description tags for events, alarms, notifications, and business service monitoring sections.

--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-handling.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-handling.adoc
@@ -1,5 +1,6 @@
 
 = Alarm Handling
+:description: Ways to manage alarms in OpenNMS Horizon/Meridian: acknowledgement, clearing, escalation, related events, alarm note, and advanced alarm handling.
 
 The following are ways you can interact with alarms.
 
