--- a/docs/modules/operation/pages/deep-dive/events/event-sources.adoc
+++ b/docs/modules/operation/pages/deep-dive/events/event-sources.adoc
@@ -1,6 +1,7 @@
 
 [[ga-events-sources-of-events]]
 = Sources of Events
+:description: Overview of where events originate in OpenNMS Horizon/Meridian.
 
 Events may originate within {page-component-title} itself or from outside.
 
