--- a/docs/modules/operation/pages/deep-dive/alarms/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/introduction.adoc
@@ -1,5 +1,6 @@
 
 = Alarms
+:description: Overview of alarms in OpenNMS Horizon/Meridian for fault management information.
 
 {page-component-title} uses a network's managed entities, their resources, the services they provide, and any applications that they host to monitor problem states.
 
