--- a/docs/modules/operation/pages/deep-dive/bsm/business-service-map.adoc
+++ b/docs/modules/operation/pages/deep-dive/bsm/business-service-map.adoc
@@ -1,5 +1,6 @@
 
 = Business Service Topology
+:description: How the topology map in OpenNMS Horizon/Meridian lets you view business service hierarchies: simulation mode, edit icons, and sharing.
 
 Business services can depend on each other.
 Together, they build a business service hierarchy.
