--- a/docs/modules/operation/pages/deep-dive/events/sources/snmp-traps.adoc
+++ b/docs/modules/operation/pages/deep-dive/events/sources/snmp-traps.adoc
@@ -1,6 +1,7 @@
 
 [[ga-events-sources-snmp-traps]]
 = SNMP Traps
+:description: All about events and SNMP traps in OpenNMS Horizon/Meridian: definitions, parm replacement token, varbinds, and traps forwarded by proxy.
 
 {page-component-title} can receive and process SNMP traps/informs from SNMP-capable devices out of the box.
 It receives SNMP traps via the xref:reference:daemons/daemon-config-files/trapd.adoc[trapd service daemon], which is enabled by default.
