--- a/docs/modules/operation/pages/deep-dive/events/sources/tl1.adoc
+++ b/docs/modules/operation/pages/deep-dive/events/sources/tl1.adoc
@@ -1,6 +1,7 @@
 
 [[ga-events-sources-tl1]]
 = TL1 Autonomous Messages
+:description: Overview of retrieving autonomous messages from TL1-enabled equipment in OpenNMS Horizon/Meridian.
 
 Autonomous messages can be retrieved from certain TL1-enabled equipment and transformed into events.
 
