--- a/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
@@ -89,3 +89,11 @@ For a large number of devices, you may want to set the `scan-interval` to `0` to
 NOTE: Even if `scan-interval` is set to `0`, new nodes added to a requisition are scanned during import.
 You can also disable this scan by setting `scan-interval` to `-1`.
 
+=== Tuning DNS reverse lookups
+
+During the provisioning process hostnames are determined for each interface IP address by DNS reverse lookups.
+A thread pool is used to allow concurrent DNS lookups.
+You can use the property `org.opennms.netmgt.provision.dns.client.rpc.threadCount` to configure the thread pool's fixed size (default 64).
+
+NOTE: To completely disable DNS reverse lookups, set the property `org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames` to `false`.
+
