NMS-15802 Add documentation

--- a/docs/modules/reference/pages/service-assurance/monitors/PageSequenceMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/PageSequenceMonitor.adoc
@@ -124,6 +124,10 @@ In case of an HTTPS request, this is also the virtual domain to send as part of 
 Colon-separated credentials such as USERNAME:PASSWORD.
 | n/a
 
+| preselect-auth
+| Preselect authentication method. At the time allows only "basic" what corresponds to Basic Authentication and requires that user name and password are provided in the attribute `user-info`
+| n/a
+
 | host
 | Set host field in HTTP header.
 | IP interface address of the service
@@ -200,6 +204,13 @@ To collect response times for individual pages in a sequence, add a ds-name attr
 The response time for each page will be stored in the same RRD file specified for the service via the rrd-base-name parameter under the specified data source name.
 
 WARNING: You need to delete existing RRD files and let them be recreated with the new list of data sources when you add a ds-name attribute to a page in a sequence that is already storing response-time data.
+
+== Preselect authentication
+When authentication is required, the first HTTP request receives a "401 Unauthorized" response with possible authentication methods. The second request is sent using the selected authentication method.
+
+Using the `preselect-auth` attribute allows you to use a specific authentication right on the first request.
+
+Some servers do not tell you which authentication methods are supported. In these cases, using the `preselect-auth` attribute is the only option.
 
 == Examples
 
