Apply suggestions from code review
Co-authored-by: Bonrob2 <59453630+Bonrob2@users.noreply.github.com>

--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
@@ -11,8 +11,8 @@ The following sections provide details about associated parsers, adapters, and l
 
 == Distributed BMP processing with Sentinel
 
-Sentinel can be used to process BMP statistics ingested by one or more Minions in order to alleviate load on the core.
-All of the BMP related adapters can be ran on Sentinel, allowing you to generate events, metrics and ingest route changes.
-In this mode, events are sent back to the message broker to be processed by the core and metrics are persisted directly to the time-series database.
+You can use Sentinel to process BMP statistics ingested by one or more Minions in order to alleviate load on the core.
+All of the BMP-related adapters can run on Sentinel, allowing you to generate events and metrics, and ingest route changes.
+In this mode, events are sent back to the message broker for the core to process and metrics are persisted directly to the time series database.
 
-TIP: The https://github.com/OpenNMS-forge/bmp-playground[BMP Playground] provides a virtual lab that can be used to simulate BGP, BMP, and see how the OpenNMS components can be configured at runtime.
+TIP: The https://github.com/OpenNMS-forge/bmp-playground[BMP Playground] provides a virtual lab that you can use to simulate BGP, BMP, and to see how the {page-component-title} components can be configured at runtime.
