--- a/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
@@ -177,13 +177,13 @@ In the example above, we set the vertex and edge topics to be different by defau
 
 == Configure the alarm sync streams client
 
-When producing alarms to a topic, we also automatically enable a Kafka Stream client to help synchronize the contents of the topic and ensure that it remains eventually consistent with the database.
+When producing alarms to a topic, we also automatically enable a Kafka Stream client to help synchronize the contents of the topic and ensure eventual consistency with the database.
 
 The streams client takes different properties than the producer and requires a separate configuration map.
 
-We automatically pull known properties from the producer configuration, allowing it to work without further configuration, in most cases.
+We automatically pull known properties from the producer configuration, allowing it to work without further configuration in most cases.
 
-If your producer takes special configuration directive, or you would like to tune the behavior of the stream client, you can set properties in `org.opennms.features.kafka.producer.streams`:
+If your producer takes a special configuration directive, or you would like to tune the behavior of the stream client, you can set properties in `org.opennms.features.kafka.producer.streams`:
 
 [source, console]
 ----
