--- a/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
+++ b/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
@@ -79,7 +79,7 @@ XML collections are defined in `$\{OPENNMS_HOME}/etc/xml-datacollection-config.x
 The `url` attribute of the `<xml-source>` supports node and IpInterface <<reference:configuration/filters/parameters.adoc#filter-parameters, field placeholders>>.
 
 NOTE: Metadata expressions can also be used in attributes of the `xml-datacollection-config.xml` configuration file.
-This allows the user to also reference credentials stored in the secure credentials
+This lets the user to also reference credentials stored in the secure credentials.
 
 .The referenced `opennms-nodes.xml` file
 [source, xml]
