NMS-16017: Corrected Keystore setup instructions for minion on docker
The keystore setup instructions for minion on docker under section:

>  Initialize the keystore with credentials
> ```
> mkdir keystore
> chmod 10001:10001 keystore
> docker-compose run -v $(pwd)/keystore:/keystore minion -s
> ```

While it should be 

```
mkdir keystore
chown -R 10001:10001 keystore
docker-compose run -v $(pwd)/keystore:/keystore minion -s
```

--- a/docs/modules/deployment/pages/minion/docker/minion.adoc
+++ b/docs/modules/deployment/pages/minion/docker/minion.adoc
@@ -95,7 +95,7 @@ Next, we need to create the keystore file and add the credentials for connecting
 [source, console]
 ----
 mkdir keystore
-chmod 10001:10001 keystore<1>
+chown -R 10001:10001 keystore<1>
 docker-compose run -v $(pwd)/keystore:/keystore minion -s<2>
 ----
 <1> Assign permissions so the container user account can write within the directory.
