--- a/docs/modules/operation/pages/deep-dive/topology/enlinkd/layer-2/cdp-discovery.adoc
+++ b/docs/modules/operation/pages/deep-dive/topology/enlinkd/layer-2/cdp-discovery.adoc
@@ -1,5 +1,6 @@
 
 = Cisco Discovery Protocol
+:description: Learn how OpenNMS Horizon/Meridian uses Cisco Discovery Protocol (CDP) in topology mapping.
 
 The https://learningnetwork.cisco.com/s/article/cisco-discovery-protocol-cdp-x[Cisco Discovery Protocol] (CDP) is a proprietary link layer protocol developed by Cisco.
 Network devices use the protocol to advertise their identities, capabilities, and neighbors.
