--- a/docs/modules/operation/pages/deep-dive/topology/enlinkd/layer-2/lldp-discovery.adoc
+++ b/docs/modules/operation/pages/deep-dive/topology/enlinkd/layer-2/lldp-discovery.adoc
@@ -1,5 +1,6 @@
 
 = Link Layer Discovery
+:description: Learn how OpenNMS Horizon/Meridian uses Link Layer Discovery (LLDP) in topology mapping.
 
 The Link Layer Discovery Protocol (LLDP) is a vendor-neutral link layer protocol.
 Network devices use it to advertise their identity, capabilities, and neighbors.
