--- a/docs/modules/operation/pages/deep-dive/topology/graphml-asset-topology-provider.adoc
+++ b/docs/modules/operation/pages/deep-dive/topology/graphml-asset-topology-provider.adoc
@@ -1,6 +1,7 @@
 
 [[asset-topology]]
 = Asset Topology Provider
+:description: Learn about the asset topology provider in OpenNMS Horizon/Meridian, asset layers, and GraphML.
 
 {page-component-title} lets users define arbitrarily complex layered topologies using http://graphml.graphdrawing.org/[GraphML] (see xref:development:graph/graph.adoc[]).
 The Asset Topology Provider avoids the need for users to work directly with GraphML by directly generating a layered GraphML topology based on node parameters and the contents of the node asset table.
