--- a/docs/modules/operation/pages/deep-dive/retention.adoc
+++ b/docs/modules/operation/pages/deep-dive/retention.adoc
@@ -1,5 +1,6 @@
 When using RRD/JRB storage, data is stored in the file system using a RRD-type strategy.
-With this "round robin" storage, data is kept in aggregated time buckets, with the latest bucket overwriting the oldest bucket, and multiple collections within the time period for a bucket will cause the data to be consolidated based on the type of bucket.
+With this "round robin" storage, data is kept in aggregated time buckets, with the latest bucket overwriting the oldest bucket.
+Multiple collections within the time period for a bucket will cause the data to be consolidated based on the type of bucket.
 
 The aggregation buckets are defined in various config files based on a `<RRD>...</RRD>` block.
 
