--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -48,6 +48,21 @@ include::../time-sync.adoc[]
 TIP: PostgreSQL 14 and 15 use the `scram-sha-256` https://www.postgresql.org/docs/14/auth-password.html[password authentication] method by default.
 If you use older versions of PostgreSQL, you should change the method in `postgresql.conf` and in `pg_hba.conf` before installing the {page-component-title} core instance.
 
+== Pool size and maximum database connections
+
+You must configure the PostgreSQL https://www.postgresql.org/docs/15/runtime-config-connection.html[max_connections] setting to at least twice the maximum pool size in {page-component-title}.
+
+The default maximum pool size value in {page-component-title} is 50, but it applies to each user in `opennms-datasources.xml`: `opennms` and `postgresql`.
+Therefore, your `max_connections` setting should be at least 100.
+
+If you change the default pool size, make sure you also update the `max_connections`.
+You typically set this in `PG_HOME/data/postgresql.conf`, but you may also use the `ALTER SYSTEM` syntax.
+You must restart the PostgreSQL server for the changes to take effect.
+
+NOTE: You may find https://pgtune.leopard.in.ua/[PGTune] useful to calculate configuration parameters for PostgreSQL.
+As with all third-party tools, we do not endorse or guarantee it.
+Use it at your own discretion.
+
 [{tabs}]
 ====
 CentOS/RHEL 9::
