--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+opennms (32.0.2-1) stable; urgency=medium
+
+  * Minor release containing several bug fixes and documentation improvements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/32.0.2/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 08 Aug 2023 15:33:18 -0400
+
 opennms (32.0.1-1) stable; urgency=medium
 
   * Minor release containing several bug fixes and documentation improvements.
