NMS-3552: Syslogd doc updates

--- a/docs/modules/reference/pages/daemons/daemon-config-files/syslogd.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/syslogd.adoc
@@ -18,9 +18,20 @@ Handles processing of xref:operation:deep-dive/events/sources/syslog.adoc[syslog
 | yes
 | no
 
-| syslogd/*.xml
+| syslog/*.xml
 | Defines individual mappings between message text and UEIs.
 Files in this folder must be specified as an include directive in `syslog-configuration.xml`.
 | yes
 | no
+|===
+
+.Syslogd log file overview
+[options="header"]
+[cols="2,3"]
+|===
+| File
+| Description
+
+| syslogd.log
+| Logs relating to syslog message parsing.
 |===
