--- a/docs/modules/operation/pages/deep-dive/provisioning/policies.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/policies.adoc
@@ -13,6 +13,19 @@ Setting this parameter’s value to `ALL_PARAMETERS` causes Provisiond to evalua
 
 String values are assumed to be a substring match, unless the parameter is prefixed with `~` to indicate the policy should evaluate as a regular expression.
 
+== Policy types
+
+There are 3 types of policies: node, IP interface, and SNMP interface.
+
+=== Node
+
+Node policies apply to the node as a whole, and are applied during node scans relatively early in the process, potentially before any interfaces are discovered.
+
+=== IP and SNMP interface
+
+The interface policies are applied during the node scan, and are intended to filter and update interfaces which are discovered through SNMP.
+NOTE: They do _not_ apply to interfaces defined in the requisition.
+
 == Supported policies
 
 For information on supported policies and how to configure them, see xref:reference:provisioning/policies.adoc[policies reference section].
