--- a/docs/modules/reference/pages/provisioning/policies/metadata.adoc
+++ b/docs/modules/reference/pages/provisioning/policies/metadata.adoc
@@ -6,4 +6,4 @@ The Metadata Policy lets you set node-level metadata in the context `requisition
 
 == Interface metadata policy
 
-The Metadata Policy lets you set interface-level metadata in the context `requisition` for provisioned nodes.
+The Metadata Policy lets you set interface-level metadata in the context `requisition` for discovered interfaces on provisioned nodes.
