--- a/docs/modules/deployment/pages/minion/install.adoc
+++ b/docs/modules/deployment/pages/minion/install.adoc
@@ -50,6 +50,12 @@ CentOS/RHEL 7::
 include::centos-rhel7/install-minion.adoc[]
 --
 
+Docker::
++
+--
+include::docker/minion.adoc[]
+--
+
 ifeval::["{page-component-title}" == "Horizon"]
 Ubuntu::
 +
@@ -63,11 +69,6 @@ Debian::
 include::debian/install-minion.adoc[]
 --
 
-Docker::
-+
---
-include::docker/minion.adoc[]
---
 endif::[]
 ====
 
@@ -105,6 +106,8 @@ If you have a firewall running on your host, allow `8201/tcp` to grant access to
 Set configuration settings in the Minion `etc` directory.
 We reference `etc` relative to the OpenNMS Minion home directory.
 Depending on your operating system, the home directory is `/usr/share/minion` for Debian and Ubuntu or `/opt/minion` for CentOS and RHEL.
+
+NOTE: If you are deploying in a container, this step should have been completed as part of the container definition.
 
 [{tabs}]
 ====
