NMS-16088: Update typos in Minion confd docs

--- a/docs/modules/reference/pages/configuration/minion-confd/minion-confd.adoc
+++ b/docs/modules/reference/pages/configuration/minion-confd/minion-confd.adoc
@@ -46,14 +46,14 @@ Writes specified configuration to `$\{MINION_HOME}/etc/instance-id.properties`.
 ipc:
     rpc:
         kafka:
-            boostrap.servers: "127.0.0.1:9092"
+            bootstrap.servers: "127.0.0.1:9092"
             acks: 1
             max.request.size: 5000000
             # Any other keys necessary can be specified here
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.core.ipc.rpc.kafka.cfg`.
-If the `bootstrap.servers` key is specified, `$\{MINION/HOME}/etc/featuresBoot.d/kafka-rpc.boot` is also updated.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.core.ipc.rpc.kafka.cfg`.
+If the `bootstrap.servers` key is specified, `$\{MINION_HOME}/etc/featuresBoot.d/kafka-rpc.boot` is also updated.
 
 === Kafka SINK
 
@@ -62,7 +62,7 @@ If the `bootstrap.servers` key is specified, `$\{MINION/HOME}/etc/featuresBoot.d
 ipc:
     sink:
         kafka:
-            boostrap.servers: "127.0.0.1:9092"
+            bootstrap.servers: "127.0.0.1:9092"
             compression.type: "gzip"
             request.timeout.ms: 30000
             max.partition.fetch.bytes: 5000000
@@ -71,8 +71,8 @@ ipc:
             # Any other keys necessary can be specified here
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.core.ipc.sink.kafka.cfg`.
-If the `bootstrap.servers` key is specified, `$\{MINION/HOME}/etc/featuresBoot.d/kafka-sink.boot` is also updated.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.core.ipc.sink.kafka.cfg`.
+If the `bootstrap.servers` key is specified, `$\{MINION_HOME}/etc/featuresBoot.d/kafka-sink.boot` is also updated.
 
 === Sink off heap
 
@@ -86,7 +86,7 @@ ipc:
             offHeapFilePath: ""
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.core.ipc.sink.offheap.cfg`.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.core.ipc.sink.offheap.cfg`.
 
 === Single port flows
 
@@ -106,7 +106,7 @@ telemetry:
                 port: 50000
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.features.telemtry.listeners-udp-single-port-flows.cfg`.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.features.telemetry.listeners-udp-single-port-flows.cfg`.
 
 === Telemetry flow listeners
 
@@ -144,7 +144,7 @@ netmgt:
         # Any other keys necessary can be specified here
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.netmgt.syslog.cfg`.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.netmgt.syslog.cfg`.
 
 === Traps
 
@@ -157,7 +157,7 @@ netmgt:
         # Any other keys necessary can be specified here
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.opennms.netmgt.trapd.cfg`.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.opennms.netmgt.trapd.cfg`.
 
 === System properties
 
@@ -170,9 +170,9 @@ system:
         # Any other keys necessary can be specified here
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/confd.system.properties`.
-`$\{MINION/HOME}/ect/confd.system.properties` is automatically appended to `etc/system.properties`.
-If the `JAEGER_AGENT_HOST` or `JAEGER_ENDPOINT` keys are specified, `$\{MINION/HOME}/etc/featuresBoot.d/jaeger.boot` is also updated.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/confd.system.properties`.
+`$\{MINION_HOME}/ect/confd.system.properties` is automatically appended to `etc/system.properties`.
+If the `JAEGER_AGENT_HOST` or `JAEGER_ENDPOINT` keys are specified, `$\{MINION_HOME}/etc/featuresBoot.d/jaeger.boot` is also updated.
 
 === Karaf properties
 
@@ -195,8 +195,8 @@ karaf:
 
 Writes the specified configuration settings to the following files:
 
-* `$\{MINION/HOME}/etc/org.apache.karaf.shell.cfg` for content under `shell`.
-* `$\{MINION/HOME}/etc/org.apache.karaf.management.cfg` for content under `management`.
+* `$\{MINION_HOME}/etc/org.apache.karaf.shell.cfg` for content under `shell`.
+* `$\{MINION_HOME}/etc/org.apache.karaf.management.cfg` for content under `management`.
 
 === Jetty properties
 
@@ -208,7 +208,7 @@ jetty:
         port: 8181
 ----
 
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/org.ops4j.pax.web.cfg`.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/org.ops4j.pax.web.cfg`.
 
 === Secure credentials vault provider
 
@@ -233,4 +233,4 @@ process-env:
 ----
 
 Use to specify an arbitrary list of Java options.
-Writes the specified configuration settings to `$\{MINION/HOME}/etc/minion-process.env`, which contains `key=value` pairs that are set in the Minion process environment.
+Writes the specified configuration settings to `$\{MINION_HOME}/etc/minion-process.env`, which contains `key=value` pairs that are set in the Minion process environment.
