--- a/docs/modules/reference/nav.adoc
+++ b/docs/modules/reference/nav.adoc
@@ -8,9 +8,9 @@
 *** xref:configuration/filters/rule-formats.adoc[]
 ** xref:configuration/core-docker.adoc[]
 ** xref:configuration/minion-docker.adoc[]
-** xref:configuration/minion-confd/minion-confd.adoc[]
-*** xref:configuration/minion-confd/jmx-exporter.adoc[]
-*** xref:configuration/minion-confd/test-confd.adoc[]
+*** xref:configuration/minion-confd/minion-confd.adoc[]
+**** xref:configuration/minion-confd/jmx-exporter.adoc[]
+**** xref:configuration/minion-confd/test-confd.adoc[]
 ** xref:configuration/sentinel-features.adoc[]
 ** xref:configuration/tuning-activemq.adoc[]
 ** xref:configuration/tuning-kafka.adoc[]
