--- a/docs/modules/operation/pages/deep-dive/topology/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/topology/introduction.adoc
@@ -1,6 +1,7 @@
 
 [[topology]]
 = Topology
+:description: Get an overview of  OpenNMS Horizon/Meridian to identify the most critical problems affecting them.
 
 A topology describes network elements (devices, services) and the connections between them.
 OpenNMS can display a user-configured xref:operation:deep-dive/topology/topology.adoc#topology-map[topology map] to help visualize your network topology.
