--- a/docs/modules/operation/pages/deep-dive/database-reports/templates/interface-avail.adoc
+++ b/docs/modules/operation/pages/deep-dive/database-reports/templates/interface-avail.adoc
@@ -1,6 +1,6 @@
 
 = Interface Availability Report
-:description: Learn how to create and Interface Availability report in OpenNMS Horizon/Meridian, which summarizes interface availability for interfaces with outages.
+:description: Learn how to create an Interface Availability report in OpenNMS Horizon/Meridian, which summarizes interface availability for interfaces with outages.
 
 This report shows a summary of interface availability for interfaces with outages.
 It's a multi-page report that provides the following data for all router interfaces, organized by IP address, over the specified date range:
