DP-64: Add meta descriptions to each page in the operation guide
Added meta descriptions for pages from Ticketing to SNMP Interface Poller sections inclusive.

--- a/docs/modules/operation/pages/deep-dive/elasticsearch/features/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/elasticsearch/features/introduction.adoc
@@ -1,5 +1,6 @@
 
 = Feature Matrix
+:description: View the list of features in OpenNMS Horizon/Meridian that leverage Elasticsearch.
 
 The following features leverage Elasticsearch and are compatible with version 7.x.
 
