--- a/docs/modules/operation/pages/deep-dive/dnsresolver/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/dnsresolver/introduction.adoc
@@ -1,6 +1,8 @@
 
 = DNS Resolver
 
+:description: Learn how OpenNMS Horizon/Meridian uses the DNS Resolver internally to provide lookup functionality as required.
+
 OpenNMS modules and functions use the DNS Resolver internally to provide lookup functionality as required.
 
 == Modules that use DNS Resolution
