--- a/docs/modules/operation/pages/deep-dive/elasticsearch/features/event-forwarder-mapping.adoc
+++ b/docs/modules/operation/pages/deep-dive/elasticsearch/features/event-forwarder-mapping.adoc
@@ -1,5 +1,6 @@
 
 = Mapping Events to Elasticsearch
+:description: Read an overview of index mapping events to Elasticsearch in OpenNMS Horizon/Meridian.
 
 == Overview of Index Mapping
 
