--- a/docs/modules/operation/pages/deep-dive/flows/distributed.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/distributed.adoc
@@ -1,6 +1,7 @@
 
 [[flows-remote]]
 = Using Minions as a Flow Collector
+:description: Learn how to set up distributed flows data collection in OpenNMS Horizon/Meridian with Minion.
 
 Beyond a basic flows setup, you may want to add a Minion to collect flows data from hard-to-reach or remote locations.
 
