--- a/docs/modules/operation/pages/deep-dive/flows/troubleshooting.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/troubleshooting.adoc
@@ -1,5 +1,6 @@
 
 = Flows Troubleshooting
+:description: Get tips for troubleshooting flows and associated features in OpenNMS Horizon/Meridian.
 
 This section describes troubleshooting methods for flows and associated features.
 
