--- a/docs/modules/operation/pages/deep-dive/kafka-producer/shell-commands.adoc
+++ b/docs/modules/operation/pages/deep-dive/kafka-producer/shell-commands.adoc
@@ -1,5 +1,6 @@
 
 = Shell Commands
+:description: Learn about the Kafka Producer's shell commands to help administer and debug this service in OpenNMS Horizon/Meridian.
 
 The Kafka Producer also provides a series of shell commands to help administer and debug the service.
 
