--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
@@ -8,7 +8,7 @@ The BMP integration in {page-component-title} lets you use these route views, st
 
 == {page-component-title} BMP integration
 
-OpenNMS leverages https://www.snas.io/[OpenBMP], an application that was developed as a reference implementation for receiving BMP messages from network equipment and presenting the state of the BGP network to the user.
+{page-component-title} leverages https://www.snas.io/[OpenBMP], an application that was developed as a reference implementation for receiving BMP messages from network equipment and presenting the state of the BGP network to the user.
 
 BGP runs on routers and high-end switches.
 Those devices can send BMP data to {page-component-title} directly or through an OpenNMS Minion collector.
